                   original non-ANSI CP437 characters 1-31 and with additional
                   "useful" characters in positions 128, 161-170 and 255.
  - Added CHR$(UTF8 codepoint%) function:
    - given a Unicode code-point returns the 1-4 character string encoding that
      character in UTF-8 format.
    - printing such characters is not compatible with OPTION CODEPAGE being
      set.
  - Added PRINT @(x%, y%) expression:
    - unlike the CMM2, x% & y% are obligatory and in character coordinates,
      there is no mode parameter.
    - equivalent to:
        CONSOLE SETCURSOR x, y : PRINT expression
  - Added missing LIST FILES command:
    - just another synonym for FILES and LS and only present for compatibility
      with the CMM2.
  - Fixed bug with MM.INFO$(...) not being recognised in interactive mode:
    - synonym for MM.INFO(...).
    - interim fix pending rewrite of pre-processor and its use from interactive
      mode.
  - Fixed bug where error messages over 127 characters would overflow into
    the storage for MM.CMDLINE$
    - error messages are now truncated to 127 characters.

Version 2021.01.00-a2 - 6-Nov-2021:
  - Added ability to specify at the Linux shell a BASIC program that MMB4L
    should RUN when it starts, e.g.
        ./mmbasic myprogram.bas arg1 arg2 arg3
    see README for details.
  - Added optional integer argument (default 0) to END and QUIT that can be
    used to return an exit code to the Linux shell, see README for details.
  - Added SETTICK command from the CMM2:
    - SETTICK FAST is not supported.
    - Be aware that Since Linux is not a Real Time Operating System all timing
      commands such as PAUSE and SETTICK are subject to more error and variation
      than on the microcontroller MMBasic implementations.
  - Added JSON$() function from the CMM2:
    - MMB4L adds an optional 3rd parameter which is a 2 bit argument controlling
      how explicit nulls and missing values are handled in the JSON: