@@ -3,6 +3,16 @@
 
 #include <stdlib.h>
 
+#define max(a,b) \
+    ({ __typeof__ (a) _a = (a); \
+        __typeof__ (b) _b = (b); \
+        _a > _b ? _a : _b; })
+
+#define min(a,b) \
+    ({ __typeof__ (a) _a = (a); \
+        __typeof__ (b) _b = (b); \
+        _a < _b ? _a : _b; })
+
 #define FAILED(x) (x != 0)
 #define SUCCEEDED(x) (x == 0)
 
